Female version of messages

--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -81,13 +81,13 @@
         [then]
             [message]
                 speaker=$unit.id
-                message= _ "Argh, I’m dying"
-                female_message= _ "female^Argh, I’m dying"
+                message= _ "Argh, I’m dying!"
+                female_message= _ "female^Argh, I’m dying!"
             [/message]
             [message]
-                speaker=narrator
+                speaker=$unit.id
                 message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                image=$unit.profile
+                female_message= _ "female^$unit.name a $nfwe_unit_type.name was destroyed."
             [/message]
         [/then]
         [elseif]
@@ -100,13 +100,13 @@
             [then]
                 [message]
                     speaker=$unit.id
-                    message= _ "Argh, I’m dying"
-                    female_message= _ "female^Argh, I’m dying"
+                    message= _ "Argh, I’m dying!"
+                    female_message= _ "female^Argh, I’m dying!"
                 [/message]
                 [message]
-                    speaker=narrator
+                    speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                    image=$unit.profile
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was revived as undead."
                 [/message]
             [/then]
         [/elseif]
@@ -120,13 +120,13 @@
             [then]
                 [message]
                     speaker=$unit.id
-                    message= _ "Argh, I’m dying"
-                    female_message= _ "female^Argh, I’m dying"
+                    message= _ "Argh, I’m dying!"
+                    female_message= _ "female^Argh, I’m dying!"
                 [/message]
                 [message]
-                    speaker=narrator
+                    speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                    image=$unit.profile
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.name returned as a ghost."
                 [/message]
             [/then]
         [/elseif]
@@ -140,13 +140,13 @@
             [then]
                 [message]
                     speaker=$unit.id
-                    message= _ "Argh"
-                    female_message= _ "female^Argh"
+                    message= _ "Argh!"
+
                 [/message]
                 [message]
-                    speaker=narrator
+                    speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                    image=$unit.profile
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was converted by the enemy."
                 [/message]
             [/then]
         [/elseif]
@@ -164,17 +164,17 @@
                     female_message= _ "female^Please rescue me!"
                 [/message]
                 [message]
-                    speaker=narrator
+                    speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have to pay a ransom."
-                    image=$unit.profile
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have to pay a ransom."
                 [/message]
             [/then]
         [/elseif]
         [else]
             [message]
                 speaker=$unit.id
-                message= _ "Argh, I’m wounded"
-                female_message= _ "female^Argh, I’m wounded"
+                message= _ "Argh, I’m wounded!"
+                female_message= _ "female^Argh, I’m wounded!"
             [/message]
         [/else]
     [/if]
