Animations and females

--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -212,7 +212,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_water
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Aquaphobia" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from Aquaphobia"
+                female_text=_"female^Recovered from Aquaphobia"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -240,7 +255,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_hight
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Acrophobia" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from Acrophobia"
+                female_text=_"female^Recovered from Acrophobia"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -268,7 +298,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_desert
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Erimophobia" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from Erimophobia"
+                female_text=_"female^Recovered from Erimophobia"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -296,7 +341,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_cave
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Claustrophobia" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from Claustrophobia"
+                female_text=_"female^Recovered from Claustrophobia"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -324,7 +384,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_plant
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Dendrophobia" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from Dendrophobia"
+                female_text=_"female^Recovered from Dendrophobia"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -352,7 +427,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_open
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Agoraphobia" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from Agoraphobia"
+                female_text=_"female^Recovered from Agoraphobia"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -389,7 +479,22 @@
                         {EVENT_SECOND_UNIT}
                         object_id=coward
                     [/remove_object]
-                    {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from Cowardice" {NFW_COLOR_GREEN}}
+                    [animate_unit]
+                        [filter]
+                            {EVENT_SECOND_UNIT}
+                        [/filter]
+                        flag=healed
+                        with_bars=no
+                        male_text=_"Recovered from Cowardice"
+                        female_text=_"female^Recovered from Cowardice"
+                        red=0
+                        green=255
+                        blue=0
+                    [/animate_unit]
+                    [delay]
+                        time=500
+                        accelerate=yes
+                    [/delay]
                 [/then]
             [/if]
         [/case]
@@ -413,6 +518,15 @@
 
     [filter_second]
         ability=nfwme_scared_of_weapon
+        [or]
+            [filter_wml]
+                [modifications]
+                    [object]
+                        id=fear_of_weapon
+                    [/object]
+                [/modifications]
+            [/filter_wml]
+        [/or]
     [/filter_second]
 
     [switch]
@@ -423,7 +537,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_weapon
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of $second_unit.variables.scary_weapon_translated" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from fear of $second_unit.variables.scary_weapon_translated"
+                female_text=_"female^Recovered from fear of $second_unit.variables.scary_weapon_translated"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
             {CLEAR_VARIABLE $second_unit.variables.scary_weapon}
             {CLEAR_VARIABLE $second_unit.variables.scary_weapon_translated}
         [/case]
@@ -454,7 +583,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_light
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of light" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from fear of light"
+                female_text=_"female^Recovered from fear of light"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -483,7 +627,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_dark
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of dark" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from fear of dark"
+                female_text=_"female^Recovered from fear of dark"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
@@ -511,7 +670,22 @@
                 {EVENT_SECOND_UNIT}
                 object_id=fear_of_fog
             [/remove_object]
-            {NFW_FLOAT_TEXT_SCROLL $x2 $y2 _"Recovered from fear of fog" {NFW_COLOR_GREEN}}
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                male_text=_"Recovered from fear of fog"
+                female_text=_"female^Recovered from fear of fog"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=500
+                accelerate=yes
+            [/delay]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
