--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -16,6 +16,7 @@
     [modify_unit]
         [filter]
             ability=amnesia_dummy
+            formula="experience > 2"
             [not]
                 x,y=recall,recall
             [/not]
@@ -23,6 +24,19 @@
         [effect]
             apply_to=experience
             increase=-2
+        [/effect]
+    [/modify_unit]
+    [modify_unit]
+        [filter]
+            ability=amnesia_dummy
+            formula="experience <= 2"
+            [not]
+                x,y=recall,recall
+            [/not]
+        [/filter]
+        [effect]
+            apply_to=experience
+            set=0
         [/effect]
     [/modify_unit]
 [/event]
@@ -144,7 +158,21 @@
             increase=8
         [/effect]
     [/modify_unit]
-    {NFW_FLOAT_TEXT $x2 $y2 "8" color="0,255,0"}
+	[animate_unit]
+		[filter]
+			{EVENT_SECOND_UNIT}
+		[/filter]
+		flag=healed
+		with_bars=no
+		text="8"
+		red=0
+		green=255
+		blue=0
+	[/animate_unit]
+	[delay]
+		time=200
+		accelerate=yes
+	[/delay]
 [/event]
 
 #Heals water elementals on water or cold terrains
@@ -191,7 +219,21 @@
             trait=nfw_elemental_water
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x1 $y1 "2" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="2"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
     [if]
@@ -200,7 +242,21 @@
             trait=nfw_elemental_water
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x2 $y2 "2" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_SECOND_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="2"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
 [/event]
@@ -249,7 +305,21 @@
             trait=nfw_elemental_fire
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x1 $y1 "4" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="4"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
     [if]
@@ -258,7 +328,21 @@
             trait=nfw_elemental_fire
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x2 $y2 "4" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_SECOND_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="4"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
 [/event]
@@ -307,7 +391,21 @@
             trait=nfw_elemental_earth
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x1 $y1 "2" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="2"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
     [if]
@@ -316,7 +414,21 @@
             trait=nfw_elemental_earth
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x2 $y2 "2" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_SECOND_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="2"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
 [/event]
@@ -365,7 +477,21 @@
             trait=nfw_elemental_arcane
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x1 $y1 "8" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="8"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
     [if]
@@ -374,7 +500,21 @@
             trait=nfw_elemental_arcane
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x2 $y2 "8" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_SECOND_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="8"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
 [/event]
@@ -423,7 +563,21 @@
             trait=nfw_elemental_air
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x1 $y1 "4" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="4"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
     [if]
@@ -432,7 +586,21 @@
             trait=nfw_elemental_air
         [/have_unit]
         [then]
-            {NFW_FLOAT_TEXT $x2 $y2 "4" color="0,255,0"}
+			[animate_unit]
+				[filter]
+					{EVENT_SECOND_UNIT}
+				[/filter]
+				flag=healed
+				with_bars=no
+				text="4"
+				red=0
+				green=255
+				blue=0
+			[/animate_unit]
+			[delay]
+				time=200
+				accelerate=yes
+			[/delay]
         [/then]
     [/if]
 [/event]
