--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -87,7 +87,7 @@
             [message]
                 speaker=$unit.id
                 message= _ "$unit.name a $nfwe_unit_type.name was destroyed."
-                female_message= _ "female^$unit.name a $nfwe_unit_type.name was destroyed."
+                female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was destroyed."
             [/message]
         [/then]
         [elseif]
@@ -106,7 +106,7 @@
                 [message]
                     speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name was revived as undead."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was revived as undead."
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was revived as undead."
                 [/message]
             [/then]
         [/elseif]
@@ -126,7 +126,7 @@
                 [message]
                     speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name returned as a ghost."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.name returned as a ghost."
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name returned as a ghost."
                 [/message]
             [/then]
         [/elseif]
@@ -141,12 +141,11 @@
                 [message]
                     speaker=$unit.id
                     message= _ "Argh!"
-
                 [/message]
                 [message]
                     speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name was converted by the enemy."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was converted by the enemy."
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was converted by the enemy."
                 [/message]
             [/then]
         [/elseif]
@@ -166,7 +165,7 @@
                 [message]
                     speaker=$unit.id
                     message= _ "$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have to pay a ransom."
-                    female_message= _ "female^$unit.name a $nfwe_unit_type.name was captured by the enemy. You will have to pay a ransom."
+                    female_message= _ "female^$unit.name a $nfwe_unit_type.female.name was captured by the enemy. You will have to pay a ransom."
                 [/message]
             [/then]
         [/elseif]
