fear of weapon buff
also avoid duplication because variable conflicts

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -793,6 +793,20 @@
                         race=mechanical
                     [/filter]
                 [/have_location]
+                [or]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            [filter_wml]
+                                [modifications]
+                                    [object]
+                                        id=fear_of_weapon
+                                    [/object]
+                                [/modifications]
+                            [/filter_wml]
+                        [/filter]
+                    [/have_location]
+                [/or]
                 [then]
                     [fire_event]
                         name=nfwe_rand_wound
