--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -355,14 +355,22 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
         [object]
             id=fear_of_weapon
             [effect]
+                apply_to=new_ability
+                [abilities]
+                    [display]
+                        id=nfwme_scared_of_weapon
+                        name="<span color='#DA0000'>"+_"weakness"+"</span>"
+                        description=_"-50% strikes and -20% accuracy when facing an enemy with $second_weapon.description|.
+Face your fears and defeat them to try to overcome them."
+                    [/display]
+                [/abilities]
+            [/effect]
+            [effect]
                 apply_to=attack
                 [set_specials]
                     mode=append
                     [attacks]
-                        name="<span color='#DA0000'>"+_"weakness"+"</span>"
-                        description=_"-50% strikes and -20% accuracy when facing an enemy with $second_weapon.description|.
-Face your fears and defeat them to try to overcome them."
-                        id=nfwme_scared_of_weapon
+                        id=nfwme_scared_of_weapon_attacks
                         [filter_opponent]
                             [has_attack]
                                 name=$nfwme_rand_scary_weapon
