Mechanical message and fixes

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -242,12 +242,12 @@
     first_time_only=no
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 08_Silent_Forest}
-        {VARIABLE_CONDITIONAL nfw_first_death not_equals yes}
+        {VARIABLE_CONDITIONAL nfw_death_trigger not_equals yes}
     [/filter_condition]
     [filter]
         side=2,3
     [/filter]
-    {VARIABLE nfw_first_death yes}
+    {VARIABLE nfw_death_trigger yes}
     {VARIABLE nfw_already_dead yes}
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Execution" {NFW_COLOR_RED}}
 [/event]
@@ -262,7 +262,6 @@
     [filter]
         id=Thelarion
     [/filter]
-    {VARIABLE nfw_first_death yes}
     {VARIABLE nfw_already_dead yes}
     {NFW_frostbite_WOUND}
 [/event]
