--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -35,11 +35,11 @@
 [event]
     name=prestart
     {CLEAR_VARIABLE nfw_wounded}
-    {CLEAR_VARIABLE nfw_first_death}
     {CLEAR_VARIABLE nfw_no_dialog}
     {CLEAR_VARIABLE nfw_bridge_destroyed}
     {CLEAR_VARIABLE nfw_kill_stranded}
     {CLEAR_VARIABLE nfw_disabled}
+	{CLEAR_VARIABLE healed_unit}
 [/event]
 
 [event]
@@ -76,6 +76,9 @@
             {EVENT_UNIT}
             [filter]
                 trait=nfw_dead
+				[not]
+					race=mechanical
+				[/not]
             [/filter]
         [/have_location]
         [then]
@@ -95,6 +98,9 @@
                 {EVENT_UNIT}
                 [filter]
                     trait=nfwme_corpse
+					[not]
+						race=mechanical
+					[/not]
                 [/filter]
             [/have_location]
             [then]
@@ -115,6 +121,9 @@
                 {EVENT_UNIT}
                 [filter]
                     trait=ghost_trait
+					[not]
+						race=mechanical
+					[/not]
                 [/filter]
             [/have_location]
             [then]
@@ -135,6 +144,9 @@
                 {EVENT_UNIT}
                 [filter]
                     trait=nfw_plagued
+					[not]
+						race=mechanical
+					[/not]
                 [/filter]
             [/have_location]
             [then]
@@ -154,6 +166,9 @@
                 {EVENT_UNIT}
                 [filter]
                     ability=captured_unit_display
+					[not]
+						race=mechanical
+					[/not]
                 [/filter]
             [/have_location]
             [then]
@@ -170,11 +185,27 @@
             [/then]
         [/elseif]
         [else]
-            [message]
-                speaker=$unit.id
-                message= _ "Argh, I’m wounded!"
-                female_message= _ "female^Argh, I’m wounded!"
-            [/message]
+			[if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						race=mechanical
+					[/filter]
+				[/have_location]
+				[then]
+					[message]
+						speaker=$unit.id
+						message= _ "Crash!"
+					[/message]
+				[/then]
+				[else]
+					[message]
+						speaker=$unit.id
+						message= _ "Argh, I’m wounded!"
+						female_message= _ "female^Argh, I’m wounded!"
+					[/message]
+				[/else]
+			[/if]
         [/else]
     [/if]
     [if]
