--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -48,6 +48,13 @@
     [/floating_text]
 #enddef
 
+#define REBUILD_UNIT X Y UNIT
+    [transform_unit]
+        x,y={X},{Y}
+        transform_to={UNIT}
+    [/transform_unit]
+#enddef
+
 #define NFW_FILTER_HEROES
     [have_location]
         {EVENT_UNIT}
