--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -1,6 +1,6 @@
 #textdomain wesnoth-Non_Fatal_Wounds
 
-#filter plagueable plagued units
+# filter plagueable plagued units
 [event]
     name=last_breath
     id=nfwme_death_plague
@@ -31,7 +31,7 @@
     {VARIABLE nfw_already_dead yes}
 [/event]
 
-#filter forced plagued for some scenarios
+# filter forced plagued for some scenarios
 [event]
     name=last_breath
     id=nfwme_death_plague_forced
@@ -55,7 +55,7 @@
     {VARIABLE nfw_already_dead yes}
 [/event]
 
-#random wound table
+# random wound table
 [event]
     name=last_breath
     id=nfwme_wound_table
@@ -159,7 +159,7 @@
                 [elseif]
                     [have_location]
                         {EVENT_UNIT}
-                        terrain=F*,T*
+                        terrain=F*,T*,*^F*,*^T*
                     [/have_location]
                     [then]
                         {NFW_fear_of_plant_WOUND}
@@ -196,15 +196,10 @@
                     [have_location]
                         {EVENT_UNIT}
                         terrain=G*,R*
-                    [/have_location]
-                    [and]
                         [not]
-                            [have_location]
-                                {EVENT_UNIT}
-                                terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
-                            [/have_location]
+                            terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
                         [/not]
-                    [/and]
+                    [/have_location]
                     [then]
                         {NFW_fear_of_open_WOUND}
                     [/then]
@@ -272,7 +267,7 @@
                 [elseif]
                     [have_location]
                         {EVENT_UNIT}
-                        terrain=F*,T*
+                        terrain=F*,T*,*^F*,*^T*
                     [/have_location]
                     [then]
                         {NFW_fear_of_plant_WOUND}
@@ -309,6 +304,22 @@
                         race=mechanical
                     [/filter]
                 [/have_location]
+                [or]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            ability=nfw_scared_of_dark
+                        [/filter]
+                    [/have_location]
+                [/or]
+                [or]
+                    [have_location]
+                        {EVENT_UNIT}
+                        [filter]
+                            ability=nfw_scared_of_light
+                        [/filter]
+                    [/have_location]
+                [/or]
                 [then]
                     [fire_event]
                         name=nfwe_rand_wound
@@ -324,7 +335,7 @@
                     [if]
                         [have_location]
                             {EVENT_UNIT}
-                            time_of_day_id=first_watch,second_watch,midnight,underground,deep_underground
+                            time_of_day=chaotic
                         [/have_location]
                         [then]
                             {NFW_fear_of_dark_WOUND}
@@ -332,7 +343,7 @@
                         [elseif]
                             [have_location]
                                 {EVENT_UNIT}
-                                time_of_day_id=morning,afternoon,midday
+                                time_of_day=lawful
                             [/have_location]
                             [then]
                                 {NFW_fear_of_light_WOUND}
@@ -797,13 +808,7 @@
                     [have_location]
                         {EVENT_UNIT}
                         [filter]
-                            [filter_wml]
-                                [modifications]
-                                    [object]
-                                        id=fear_of_weapon
-                                    [/object]
-                                [/modifications]
-                            [/filter_wml]
+                            ability=nfw_scared_of_weapon
                         [/filter]
                     [/have_location]
                 [/or]
@@ -825,7 +830,28 @@
         [/case]
         [case]
             value=24,123
-            {NFW_maimed_WOUND}
+            [if]
+                [have_location]
+                    {EVENT_UNIT}
+                    [filter]
+                        race=mechanical
+                    [/filter]
+                [/have_location]
+                [then]
+                    [fire_event]
+                        name=nfwe_rand_wound
+                        [primary_unit]
+                            {EVENT_UNIT}
+                        [/primary_unit]
+                        [secondary_unit]
+                            {EVENT_SECOND_UNIT}
+                        [/secondary_unit]
+                    [/fire_event]
+                [/then]
+                [else]
+                    {NFW_maimed_WOUND}
+                [/else]
+            [/if]
         [/case]
         [case]
             value=25
@@ -1130,7 +1156,7 @@
                     {EVENT_UNIT}
                     [filter]
                         [filter_side]
-                            formula="fog = true"
+                            formula="fog"
                         [/filter_side]
                     [/filter]
                 [/have_location]
