--- a/utils/Wound_logic.cfg
+++ b/utils/Wound_logic.cfg
@@ -158,21 +158,21 @@
             increase=8
         [/effect]
     [/modify_unit]
-	[animate_unit]
-		[filter]
-			{EVENT_SECOND_UNIT}
-		[/filter]
-		flag=healed
-		with_bars=no
-		text="8"
-		red=0
-		green=255
-		blue=0
-	[/animate_unit]
-	[delay]
-		time=200
-		accelerate=yes
-	[/delay]
+    [animate_unit]
+        [filter]
+            {EVENT_SECOND_UNIT}
+        [/filter]
+        flag=healed
+        with_bars=no
+        text="8"
+        red=0
+        green=255
+        blue=0
+    [/animate_unit]
+    [delay]
+        time=200
+        accelerate=yes
+    [/delay]
 [/event]
 
 #Heals water elementals on water or cold terrains
@@ -219,21 +219,21 @@
             trait=nfw_elemental_water
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="2"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="2"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
     [if]
@@ -242,21 +242,21 @@
             trait=nfw_elemental_water
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_SECOND_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="2"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="2"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
 [/event]
@@ -305,21 +305,21 @@
             trait=nfw_elemental_fire
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="4"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="4"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
     [if]
@@ -328,21 +328,21 @@
             trait=nfw_elemental_fire
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_SECOND_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="4"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="4"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
 [/event]
@@ -391,21 +391,21 @@
             trait=nfw_elemental_earth
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="2"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="2"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
     [if]
@@ -414,21 +414,21 @@
             trait=nfw_elemental_earth
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_SECOND_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="2"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="2"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
 [/event]
@@ -477,21 +477,21 @@
             trait=nfw_elemental_arcane
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="8"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="8"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
     [if]
@@ -500,21 +500,21 @@
             trait=nfw_elemental_arcane
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_SECOND_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="8"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="8"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
 [/event]
@@ -563,21 +563,21 @@
             trait=nfw_elemental_air
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="4"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="4"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
     [if]
@@ -586,21 +586,33 @@
             trait=nfw_elemental_air
         [/have_unit]
         [then]
-			[animate_unit]
-				[filter]
-					{EVENT_SECOND_UNIT}
-				[/filter]
-				flag=healed
-				with_bars=no
-				text="4"
-				red=0
-				green=255
-				blue=0
-			[/animate_unit]
-			[delay]
-				time=200
-				accelerate=yes
-			[/delay]
+            [animate_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                flag=healed
+                with_bars=no
+                text="4"
+                red=0
+                green=255
+                blue=0
+            [/animate_unit]
+            [delay]
+                time=200
+                accelerate=yes
+            [/delay]
         [/then]
     [/if]
+[/event]
+
+#reload nebulaphobia to match the fog status of the scenario
+[event]
+    name=unit placed
+    id=nfw_reload_fog
+    first_time_only=no
+    [filter]
+        ability=fear_of_fog_display
+    [/filter]
+
+    {REBUILD_UNIT $x1 $y1 $unit.type}
 [/event]
