--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -1,58 +1,92 @@
 #textdomain wesnoth-Non_Fatal_Wounds
 
-#AMLA healing
+# AMLA healing
+#define WOUND_HEALING ABILITY WOUND
+    [event]
+        name=post_advance
+        id=nfw_healing_{WOUND}
+        first_time_only=no
+
+        [filter]
+            ability={ABILITY}
+        [/filter]
+
+        [store_unit]
+            [filter]
+                {EVENT_UNIT}
+            [/filter]
+            variable=healed_unit
+        [/store_unit]
+
+        [for]
+            array=healed_unit.modifications.object
+            [do]
+                [if]
+                    {VARIABLE_CONDITIONAL healed_unit.modifications.object[$i].id equals {WOUND}}
+                    [then]
+                        {CLEAR_VARIABLE healed_unit.modifications.object[$i]}
+                        [break]
+                        [/break]
+                    [/then]
+                [/if]
+            [/do]
+        [/for]
+
+        [unstore_unit]
+            variable=healed_unit
+        [/unstore_unit]
+        {REBUILD_UNIT $x1 $y1 $unit.type}
+    [/event]
+#enddef
+
+# facing fears healing
+#define FEAR_HEALING ABILITY WOUND
+    [store_unit]
+        [filter]
+            {EVENT_SECOND_UNIT}
+        [/filter]
+        variable=healed_unit
+    [/store_unit]
+
+    [for]
+        array=healed_unit.modifications.object
+        [do]
+            [if]
+                {VARIABLE_CONDITIONAL healed_unit.modifications.object[$i].id equals {WOUND}}
+                [then]
+                    {CLEAR_VARIABLE healed_unit.modifications.object[$i]}
+                    [break]
+                    [/break]
+                [/then]
+            [/if]
+        [/do]
+    [/for]
+
+    [unstore_unit]
+        variable=healed_unit
+    [/unstore_unit]
+    {REBUILD_UNIT $x2 $y2 $second_unit.type}
+#enddef
+
+# list of specific AMLA healing events for stackable wounds (only heals 1 each AMLA)
+
+{WOUND_HEALING broken_arm_display_healing broken_arm}
+{WOUND_HEALING broken_wing_display_healing broken_wing}
+{WOUND_HEALING broken_leg_display_healing broken_leg}
+{WOUND_HEALING broken_rib_display_healing broken_rib}
+{WOUND_HEALING burned_display_healing burned}
+{WOUND_HEALING concussion_display_healing concussion}
+{WOUND_HEALING frostbite_display_healing frostbite}
+{WOUND_HEALING gash_display_healing gash}
+{WOUND_HEALING maimed_display_healing maimed}
+{WOUND_HEALING damaged_display_healing damaged}
+{WOUND_HEALING necrosis_display_healing necrosis}
+{WOUND_HEALING wild_magic_display_healing wild_magic}
+
 [event]
     name=post_advance
-    id=nfwme_wound_healing
+    id=nfw_remove_display
     first_time_only=no
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=broken_arm_display_healing
-        object_id=broken_arm
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=broken_wing_display_healing
-        object_id=broken_wing
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=broken_leg_display_healing
-        object_id=broken_leg
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=broken_rib_display_healing
-        object_id=broken_rib
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=burned_display_healing
-        object_id=burned
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=concussion_display_healing
-        object_id=concussion
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=frostbite_display_healing
-        object_id=frostbite
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=gash_display_healing
-        object_id=gash
-    [/remove_object]
 
     [remove_object]
         {EVENT_UNIT}
@@ -68,24 +102,6 @@
 
     [remove_object]
         {EVENT_UNIT}
-        ability=maimed_display_healing
-        object_id=maimed
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=damaged_display_healing
-        object_id=damaged
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=necrosis_display_healing
-        object_id=necrosis
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
         ability=amnesia_display_healing
         object_id=amnesia
     [/remove_object]
@@ -94,12 +110,6 @@
         {EVENT_UNIT}
         ability=sick_display_healing
         object_id=sick
-    [/remove_object]
-
-    [remove_object]
-        {EVENT_UNIT}
-        ability=wild_magic_display_healing
-        object_id=wild_magic
     [/remove_object]
 
     [modify_unit]
@@ -190,28 +200,23 @@
     [/modify_unit]
 [/event]
 
-#fear of water
+# fear of water
 [event]
     name=last_breath
     id=nfwme_fear_of_water_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..10)}
-
     [filter_second]
         ability=fear_of_water_display
         [filter_location]
-            terrain=W*^*,S*^*
+            terrain=W*,S*
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
         variable=rand_heal_fear
         [case]
             value=1
-            [remove_object]
-                {EVENT_SECOND_UNIT}
-                object_id=fear_of_water
-            [/remove_object]
+            {FEAR_HEALING fear_of_water_display fear_of_water}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -233,28 +238,23 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of hight
+# fear of hight
 [event]
     name=last_breath
     id=nfwme_fear_of_hight_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..10)}
-
     [filter_second]
         ability=fear_of_hight_display
         [filter_location]
-            terrain=M*^*,H*^*
+            terrain=M*,H*
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
         variable=rand_heal_fear
         [case]
             value=1
-            [remove_object]
-                {EVENT_SECOND_UNIT}
-                object_id=fear_of_hight
-            [/remove_object]
+            {FEAR_HEALING fear_of_hight_display fear_of_hight}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -276,28 +276,23 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of desert
+# fear of desert
 [event]
     name=last_breath
     id=nfwme_fear_of_desert_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..10)}
-
     [filter_second]
         ability=fear_of_desert_display
         [filter_location]
-            terrain=A*^*,D*^*
+            terrain=A*,D*
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
         variable=rand_heal_fear
         [case]
             value=1
-            [remove_object]
-                {EVENT_SECOND_UNIT}
-                object_id=fear_of_desert
-            [/remove_object]
+            {FEAR_HEALING fear_of_desert_display fear_of_desert}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -319,28 +314,23 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of cave
+# fear of cave
 [event]
     name=last_breath
     id=nfwme_fear_of_cave_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..10)}
-
     [filter_second]
         ability=fear_of_cave_display
         [filter_location]
-            terrain=U*^*
+            terrain=U*
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
         variable=rand_heal_fear
         [case]
             value=1
-            [remove_object]
-                {EVENT_SECOND_UNIT}
-                object_id=fear_of_cave
-            [/remove_object]
+            {FEAR_HEALING fear_of_cave_display fear_of_cave}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -362,28 +352,23 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of plant
+# fear of plant
 [event]
     name=last_breath
     id=nfwme_fear_of_plant_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..10)}
-
     [filter_second]
         ability=fear_of_plant_display
         [filter_location]
-            terrain=F*^*,T*^*
+            terrain=F*,T*,*^F*,*^T*
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
         variable=rand_heal_fear
         [case]
             value=1
-            [remove_object]
-                {EVENT_SECOND_UNIT}
-                object_id=fear_of_plant
-            [/remove_object]
+            {FEAR_HEALING fear_of_plant_display fear_of_plant}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -405,28 +390,27 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of open spaces
+# fear of open spaces
 [event]
     name=last_breath
     id=nfwme_fear_of_open_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..10)}
 
     [filter_second]
         ability=fear_of_open_display
         [filter_location]
-            terrain=G*^*,R*^*
+            terrain=G*,R*
+            [not]
+                terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
+            [/not]
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
         variable=rand_heal_fear
         [case]
             value=1
-            [remove_object]
-                {EVENT_SECOND_UNIT}
-                object_id=fear_of_open
-            [/remove_object]
+            {FEAR_HEALING fear_of_open_display fear_of_open}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
@@ -448,17 +432,18 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#coward
+# coward
 [event]
     name=last_breath
     id=nfwme_coward_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..5)}
-
     [filter_second]
         ability=coward_display
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..5)}
+    [message]
+        message="Enemy has level $unit.level and advances to $unit.advances_to you have level $second_unit.level"
+    [/message]
     [switch]
         variable=rand_heal_fear
         [case]
@@ -474,11 +459,14 @@
                         equals=""
                     [/variable]
                 [/or]
+                [or]
+                    [variable]
+                        name=unit.advances_to
+                        equals=$nfw_empty_var
+                    [/variable]
+                [/or]
                 [then]
-                    [remove_object]
-                        {EVENT_SECOND_UNIT}
-                        object_id=coward
-                    [/remove_object]
+                    {FEAR_HEALING coward_display coward}
                     [animate_unit]
                         [filter]
                             {EVENT_SECOND_UNIT}
@@ -499,25 +487,22 @@
             [/if]
         [/case]
     [/switch]
-
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of weapon
+# fear of weapon
 [event]
     name=last_breath
     id=nfwme_fear_of_weapon_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..5)}
-
     [filter]
         [has_attack]
             name=$second_unit.variables.scary_weapon
         [/has_attack]
     [/filter]
-
+    {VARIABLE_OP rand_heal_fear rand(1..5)}
     [filter_second]
-        ability=nfwme_scared_of_weapon
+        ability=nfw_scared_of_weapon
         [or]
             [filter_wml]
                 [modifications]
@@ -553,28 +538,31 @@
                 time=500
                 accelerate=yes
             [/delay]
-            {CLEAR_VARIABLE $second_unit.variables.scary_weapon}
-            {CLEAR_VARIABLE $second_unit.variables.scary_weapon_translated}
+            [modify_unit]
+                [filter]
+                    {EVENT_SECOND_UNIT}
+                [/filter]
+                {CLEAR_VARIABLE scary_weapon}
+                {CLEAR_VARIABLE scary_weapon_translated}
+            [/modify_unit]
         [/case]
     [/switch]
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of light
+# fear of light
 [event]
     name=last_breath
     id=nfwme_fear_of_light_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..20)}
-
     [filter_second]
-        ability=nfwme_scared_of_light
+        ability=nfw_scared_of_light
         [filter_location]
             {EVENT_SECOND_UNIT}
-            time_of_day_id=morning,afternoon,midday
+            time_of_day=lawful
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..20)}
     [switch]
         variable=rand_heal_fear
         [case]
@@ -604,21 +592,19 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of dark
+# fear of dark
 [event]
     name=last_breath
     id=nfwme_fear_of_dark_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..20)}
-
     [filter_second]
-        ability=nfwme_scared_of_dark
+        ability=nfw_scared_of_dark
         [filter_location]
             {EVENT_SECOND_UNIT}
-            time_of_day_id=first_watch,second_watch,midnight,underground,deep_underground
+            time_of_day=chaotic
         [/filter_location]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..20)}
     [switch]
         variable=rand_heal_fear
         [case]
@@ -648,28 +634,23 @@
     {CLEAR_VARIABLE rand_heal_fear}
 [/event]
 
-#fear of fog
+# fear of fog
 [event]
     name=last_breath
     id=nfwme_fear_of_fog_healing
     first_time_only=no
-    {VARIABLE_OP rand_heal_fear rand(1..10)}
-
     [filter_second]
         ability=fear_of_fog_display
         [filter_side]
             formula="fog"
         [/filter_side]
     [/filter_second]
-
+    {VARIABLE_OP rand_heal_fear rand(1..10)}
     [switch]
         variable=rand_heal_fear
         [case]
             value=1
-            [remove_object]
-                {EVENT_SECOND_UNIT}
-                object_id=fear_of_fog
-            [/remove_object]
+            {FEAR_HEALING fear_of_fog_display fear_of_fog}
             [animate_unit]
                 [filter]
                     {EVENT_SECOND_UNIT}
